logs/app-2023-12-13.log
 [LOGGER] 2023-12-13 10:12:20.209 AM error : controllers/word.controller.js:getAllWord - Cannot read properties of null (reading 'name')
 [LOGGER] 2023-12-13 10:38:39.198 AM error : controllers/userController.js:removeUserAccount - resultKataPending is not defined
 [LOGGER] 2023-12-13 10:39:21.119 AM error : controllers/userController.js:removeUserAccount - result is not defined
 [LOGGER] 2023-12-13 10:46:47.686 AM error : controllers/userController.js:removeUserAccount - target: rinjani_visitor_db.-.primary: vttablet: rpc error: code = DeadlineExceeded desc = Lock wait timeout exceeded; try restarting transaction (errno 1205) (sqlstate HY000) (CallerID: qn25jh1qvuovabbz1skm): Sql: "delete from Kata where userId = :userId /* VARCHAR */ and `status` = :status /* VARCHAR */", BindVars: {REDACTED}
 [LOGGER] 2023-12-13 10:49:26.923 AM error : uncaughtException: Unexpected token '{'
/Users/muh.firdaus/Documents/Daus/SIB Dicoding/Capstone/kasa-talk-api-v1/src/controllers/user.controller.js:717
        {
        ^

SyntaxError: Unexpected token '{'
    at internalCompileFunction (node:internal/vm:73:18)
    at wrapSafe (node:internal/modules/cjs/loader:1178:20)
    at Module._compile (node:internal/modules/cjs/loader:1220:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1310:10)
    at Module.load (node:internal/modules/cjs/loader:1119:32)
    at Module._load (node:internal/modules/cjs/loader:960:12)
    at Module.require (node:internal/modules/cjs/loader:1143:19)
    at require (node:internal/modules/cjs/helpers:119:18)
    at Object.<anonymous> (/Users/muh.firdaus/Documents/Daus/SIB Dicoding/Capstone/kasa-talk-api-v1/src/routes/user.route.js:12:5)
    at Module._compile (node:internal/modules/cjs/loader:1256:14)
 [LOGGER] 2023-12-13 10:49:28.901 AM error : uncaughtException: Unexpected token '{'
/Users/muh.firdaus/Documents/Daus/SIB Dicoding/Capstone/kasa-talk-api-v1/src/controllers/user.controller.js:717
        {
        ^

SyntaxError: Unexpected token '{'
    at internalCompileFunction (node:internal/vm:73:18)
    at wrapSafe (node:internal/modules/cjs/loader:1178:20)
    at Module._compile (node:internal/modules/cjs/loader:1220:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1310:10)
    at Module.load (node:internal/modules/cjs/loader:1119:32)
    at Module._load (node:internal/modules/cjs/loader:960:12)
    at Module.require (node:internal/modules/cjs/loader:1143:19)
    at require (node:internal/modules/cjs/helpers:119:18)
    at Object.<anonymous> (/Users/muh.firdaus/Documents/Daus/SIB Dicoding/Capstone/kasa-talk-api-v1/src/routes/user.route.js:12:5)
    at Module._compile (node:internal/modules/cjs/loader:1256:14)
 [LOGGER] 2023-12-13 10:49:36.675 AM error : uncaughtException: missing ) after argument list
/Users/muh.firdaus/Documents/Daus/SIB Dicoding/Capstone/kasa-talk-api-v1/src/controllers/user.controller.js:718
        }
        ^

SyntaxError: missing ) after argument list
    at internalCompileFunction (node:internal/vm:73:18)
    at wrapSafe (node:internal/modules/cjs/loader:1178:20)
    at Module._compile (node:internal/modules/cjs/loader:1220:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1310:10)
    at Module.load (node:internal/modules/cjs/loader:1119:32)
    at Module._load (node:internal/modules/cjs/loader:960:12)
    at Module.require (node:internal/modules/cjs/loader:1143:19)
    at require (node:internal/modules/cjs/helpers:119:18)
    at Object.<anonymous> (/Users/muh.firdaus/Documents/Daus/SIB Dicoding/Capstone/kasa-talk-api-v1/src/routes/user.route.js:12:5)
    at Module._compile (node:internal/modules/cjs/loader:1256:14)
 [LOGGER] 2023-12-13 10:50:45.584 AM error : uncaughtException: Unexpected token ','
/Users/muh.firdaus/Documents/Daus/SIB Dicoding/Capstone/kasa-talk-api-v1/src/controllers/user.controller.js:717
        ,
        ^

SyntaxError: Unexpected token ','
    at internalCompileFunction (node:internal/vm:73:18)
    at wrapSafe (node:internal/modules/cjs/loader:1178:20)
    at Module._compile (node:internal/modules/cjs/loader:1220:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1310:10)
    at Module.load (node:internal/modules/cjs/loader:1119:32)
    at Module._load (node:internal/modules/cjs/loader:960:12)
    at Module.require (node:internal/modules/cjs/loader:1143:19)
    at require (node:internal/modules/cjs/helpers:119:18)
    at Object.<anonymous> (/Users/muh.firdaus/Documents/Daus/SIB Dicoding/Capstone/kasa-talk-api-v1/src/routes/user.route.js:12:5)
    at Module._compile (node:internal/modules/cjs/loader:1256:14)
 [LOGGER] 2023-12-13 11:05:54.116 AM error : uncaughtException: transaction.rollback is not a function
TypeError: transaction.rollback is not a function
    at removeUserAccount (/Users/muh.firdaus/Documents/Daus/SIB Dicoding/Capstone/kasa-talk-api-v1/src/controllers/user.controller.js:757:23)
    at process.processTicksAndRejections (node:internal/process/task_queues:95:5)
 [LOGGER] 2023-12-13 11:08:08.732 AM error : uncaughtException: Transaction cannot be rolled back because it has been finished with state: commit
Error: Transaction cannot be rolled back because it has been finished with state: commit
    at Transaction.rollback (/Users/muh.firdaus/Documents/Daus/SIB Dicoding/Capstone/kasa-talk-api-v1/node_modules/sequelize/lib/transaction.js:59:13)
    at removeUserAccount (/Users/muh.firdaus/Documents/Daus/SIB Dicoding/Capstone/kasa-talk-api-v1/src/controllers/user.controller.js:759:23)
    at process.processTicksAndRejections (node:internal/process/task_queues:95:5)
